mdapi/Custom/objects/Appointment__c.object
<CustomObject>
    <description>This is part of the Residence Service deployment and will be used for the TOA integration.</description>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments (Account Contact)</relationshipLabel>
        <relationshipName>Appointments_AccountContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Duration__c</fullName>
        <inlineHelpText>Actual Duration in Minutes</inlineHelpText>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address_City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Country__c</fullName>
        <label>Address_Country</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Postal__c</fullName>
        <label>Address_Postal</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_State__c</fullName>
        <label>Address_State</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street__c</fullName>
        <label>Address_Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_Time__c</fullName>
        <label>Appointment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <description>Date the Appointment is finally scheduled for.  This information comes from the ETAdirect routing engine.</description>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Type__c</fullName>
        <label>Appointment_Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Mystery Visits</fullName>
                </value>
                <value>
                    <fullName>Outsourced Sales</fullName>
                </value>
                <value>
                    <fullName>Rackjobbing</fullName>
                </value>
                <value>
                    <fullName>Sales Demonstrations</fullName>
                </value>
                <value>
                    <fullName>Training Stores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Days__c</fullName>
        <label>Available Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Available_Hours__c</fullName>
        <label>Available Hours</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Briefing_Notes__c</fullName>
        <label>Briefing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_URL__c</fullName>
        <description>Link to the correct chatter group.</description>
        <label>Chatter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Remarks__c</fullName>
        <label>Client_Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Time__c</fullName>
        <label>Closing Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Survey_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Survey 2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Survey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Surveys_Formula__c</fullName>
        <formula>IF ( TEXT ( Survey_1_Status__c ) = &quot;Started&quot;, &quot; &quot; &amp; IMAGE (&quot;/img/icon/custom51_100/pencil24.png&quot;, &quot;Started&quot;, 18, 18) , &quot;&quot; ) &amp; 
IF ( TEXT ( Survey_1_Status__c ) = &quot;Finished&quot;, &quot; &quot; &amp; IMAGE (&quot;/img/msg_icons/confirm24.png&quot;, &quot;Finished&quot;, 18, 18) , &quot;&quot; ) &amp; 
IF ( TEXT ( Survey_1_Status__c ) = &quot;Unfinished&quot;, &quot; &quot; &amp; IMAGE (&quot;/img/msg_icons/error24.png&quot;, &quot;Unfinished&quot;, 18, 18) , &quot;&quot; ) &amp; &quot; &quot; &amp;
If ( IsNull( Completed_Surveys__c ), &quot;0&quot;, Text ( Completed_Surveys__c ) ) &amp; 
If ( AND ( OR ( IsNull( Completed_Surveys__c ), Completed_Surveys__c = 0 ),  Completed_Survey__c = FALSE, Completed_Survey_2__c = FALSE ), &quot;&quot;, 
If ( AND ( Completed_Surveys__c = 1,  Completed_Survey__c = TRUE, Completed_Survey_2__c = FALSE ), &quot;&quot;, 
If ( AND ( Completed_Surveys__c = 1,  Completed_Survey__c = FALSE, Completed_Survey_2__c = TRUE ), &quot;&quot;, 
If ( AND ( Completed_Surveys__c = 2,  Completed_Survey__c = TRUE, Completed_Survey_2__c = TRUE ), &quot;&quot;, 
&quot; &quot; &amp; IMAGE(&quot;/resource/Alert&quot;, &quot;Oops!&quot;, 16, 16) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Surveys</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Surveys__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed Surveys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Completion Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactIDString__c</fullName>
        <label>ContactIDString</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact__r.MailingStreet &amp; &quot; &quot; &amp; Contact__r.MailingCity &amp; &quot;, &quot; &amp; Contact__r.MailingState &amp; &quot; &quot; &amp; Contact__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Location?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Promised__c</fullName>
        <label>Promised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Distance driven for this appointment.</description>
        <label>Distance</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ETA_From__c</fullName>
        <label>ETA From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:15</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>08:45</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:15</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>09:45</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:15</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>10:45</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:15</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>11:45</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:15</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>12:45</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:15</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>13:45</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:15</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>14:45</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETA_To__c</fullName>
        <label>ETA To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:15</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>08:45</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:15</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>09:45</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:15</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>10:45</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:15</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>11:45</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:15</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>12:45</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:15</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>13:45</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:15</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>14:45</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest__c</fullName>
        <label>Earliest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <formula>IF (Escalate__c , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Escalated&quot;, 16, 16), 
&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalated?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Duration__c</fullName>
        <inlineHelpText>Est. Duration in Minutes</inlineHelpText>
        <label>Estimated Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses_Num__c</fullName>
        <formula>Value (  Expenses__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>Expenses related to this appointment (eg. parking)</description>
        <label>Expenses</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>54</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Status__c</fullName>
        <label>Field Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>non-scheduled</fullName>
                </value>
                <value>
                    <fullName>scheduled</fullName>
                    <default>true</default>
                    <label>scheduled</label>
                </value>
                <value>
                    <fullName>assigned</fullName>
                </value>
                <value>
                    <fullName>started</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>not-done</fullName>
                </value>
                <value>
                    <fullName>extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal_Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KM__c</fullName>
        <formula>Kilometers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kilometers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kilometers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Let_System_Schedule_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Let System Schedule Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Appointment__c</fullName>
        <formula>IF ( AND ( Recurrence_Days__c &gt; 0, NOT ( ISBLANK ( Recurrence_Days__c ) ) ), Appointment_Date__c + Recurrence_Days__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Time_Status__c</fullName>
        <label>On Time Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>Jeopardy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opening_Time__c</fullName>
        <label>Opening Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>20:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pictures_Attached__c</fullName>
        <label>Pictures Attached</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Appointment_Score__c</fullName>
        <label>Post Appointment Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                    <default>true</default>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Notification__c</fullName>
        <label>Preferred Notification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Day Prior</fullName>
                    <default>true</default>
                    <label>1 Day Prior</label>
                </value>
                <value>
                    <fullName>1 Hour Prior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Providers__c</fullName>
        <description>Maximum 750 providers approximately</description>
        <label>Preferred Workers</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>high</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promised_Time_Slot__c</fullName>
        <label>Promised Time Slot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8-10</fullName>
                </value>
                <value>
                    <fullName>10-12</fullName>
                </value>
                <value>
                    <fullName>13-15</fullName>
                </value>
                <value>
                    <fullName>15-17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Appointments__c</fullName>
        <label>Recommended Appointments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5/4/12 9:00 AM</fullName>
                </value>
                <value>
                    <fullName>5/4/12 12:30 PM</fullName>
                </value>
                <value>
                    <fullName>5/4/12 3:00 PM</fullName>
                </value>
                <value>
                    <fullName>5/4/12 8:00 AM</fullName>
                </value>
                <value>
                    <fullName>5/4/12 11:00 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurrence_Days__c</fullName>
        <label>Recurrence (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Technician</label>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Appointments (Recurring Technician)</relationshipLabel>
        <relationshipName>AppointmentsRecurring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA_Window_End__c</fullName>
        <formula>TEXT ( End_Date__c ) &amp; &quot; &quot; &amp; TEXT ( Closing_Time__c ) &amp; &quot;:00&quot;</formula>
        <label>SLA Window End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Window_Start__c</fullName>
        <formula>TEXT ( Start_Date__c ) &amp; &quot; &quot; &amp; TEXT ( Opening_Time__c ) &amp; &quot;:00&quot;</formula>
        <label>SLA Window Start</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>